Fixed behavior of search field on iOS

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -42,17 +42,17 @@ main {
   grid-gap: 5px;
 }
 
-main > aside {
+main > form {
   grid-area: filter;
   margin: 10px;
   display: flex;
 }
 
-main > aside .search {
+main > form .search {
   flex-grow: 1;
 }
 
-main > aside select {
+main > form select {
   flex-shrink: 0;
   flex-grow: 0;
 }
